feat: add log in

--- a/src/views/auth/sign-up-form.ejs
+++ b/src/views/auth/sign-up-form.ejs
@@ -19,13 +19,13 @@
     <input type="email" name="email" id="email" required>
 
     <label for="password">Password: </label>
-    <input type="password" name="password" id="password" minlength="8" required>
+    <input type="password" name="password_hash" id="password" minlength="8" required>
 
     <label for="confirm_password">Confirm password: </label>
     <input type="password" name="confirm_password" id="confirm_password" minlength="8" required>
 
-    <button type="submit">Sign In</button>
-    <p>Already have an account? <a href="/log-in">Log in</a></p>
+    <button type="submit">Sign up</button>
+    <p>Already have an account? <a href="/auth/log-in">Log in</a></p>
   </form>
 </body>
 </html>
