--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,5 +9,6 @@
   <h1>The 90th Minute</h1>
   <a href="/auth/log-in">Log in</a>
   <a href="/auth/sign-up">Sign up</a>
+  <a href="/dashboard">Dashboard</a>
 </body>
 </html>
