feat add basic style

--- a/src/views/auth/log-in-form.ejs
+++ b/src/views/auth/log-in-form.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The 90th Minute</title>
+  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
   <%- include("../partials/error") %>
