--- a/src/views/new-message.ejs
+++ b/src/views/new-message.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The 90th Minute</title>
+  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
   <h1>Create a new Message</h1>
@@ -19,5 +20,7 @@
 
     <button type="submit">Create</button>
   </form>
+
+  <a href="/dashboard">Go Back to Dashboard</a>
 </body>
 </html>
