--- a/src/views/membership.ejs
+++ b/src/views/membership.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The 90th Minute</title>
+  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
 
@@ -15,5 +16,7 @@
 
     <button type="submit">Send</button>
   </form>
+
+  <a href="/dashboard">Go Back to Dashboard</a>
 </body>
 </html>
